<resources>
    <string name="app_name">Currency App</string>
    <string name="please_try_other_currencies" formatted="true">%1$s, Please try other currencies</string>
    <string name="date">Date: %1$s</string>
    <string name="base">Base: %1$s</string>
    <string name="s_rate">Rate: %1$s</string>
    <string name="historical_data_for_last_3_days">Historical Data for last 3 days:</string>
    <string name="content">content</string>
    <string name="details">Details</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="the_conversion_of_to">The Conversion of %1$s %2$s to:</string>
    <string name="please_select_currencies_or_enter_amount">Please select valid currencies or enter amount</string>

</resources>